--- a/ckanext/choroplethmap/theme/public/choroplethmap.css
+++ b/ckanext/choroplethmap/theme/public/choroplethmap.css
@@ -1,3 +1,16 @@
 .choroplethmap {
   height: 200px;
 }
+
+.choroplethmap .legend {
+  line-height: 18px;
+  color: #555;
+}
+
+.choroplethmap .legend i {
+  width: 18px;
+  height: 18px;
+  float: left;
+  margin-right: 8px;
+  opacity: 0.7;
+}
