Let the user define which geojson's property will be used in the choropleth map

--- a/ckanext/choroplethmap/theme/templates/choroplethmap_view.html
+++ b/ckanext/choroplethmap/theme/templates/choroplethmap_view.html
@@ -3,6 +3,7 @@
 <div
   data-module = "choroplethmap"
   data-module-geojson-url = "{{ resource_view.geojson_url }}"
+  data-module-geojson-property = "{{ resource_view.geojson_property }}"
   id = "choroplethmap-{{ resource_view.id }}"
   class = "choroplethmap"
   >
