--- a/ckanext/choroplethmap/theme/templates/choroplethmap_form.html
+++ b/ckanext/choroplethmap/theme/templates/choroplethmap_form.html
@@ -3,3 +3,7 @@
 {{
 form.input('geojson_url', label=_('GeoJSON URL'), value=resource_view['geojson_url'])
 }}
+
+{{
+form.input('geojson_property', label=_('GeoJSON Property'), value=resource_view['geojson_property'])
+}}
