--- a/ckanext/choroplethmap/theme/templates/choroplethmap_view.html
+++ b/ckanext/choroplethmap/theme/templates/choroplethmap_view.html
@@ -2,6 +2,7 @@
 
 <div
   data-module = "choroplethmap"
+  data-module-resource-id = "{{ resource.id }}"
   data-module-geojson-url = "{{ resource_view.geojson_url }}"
   data-module-geojson-property = "{{ resource_view.geojson_property }}"
   id = "choroplethmap-{{ resource_view.id }}"
