Make the key fields that link the resource to the geojson configurable.

--- a/ckanext/choroplethmap/theme/templates/choroplethmap_form.html
+++ b/ckanext/choroplethmap/theme/templates/choroplethmap_form.html
@@ -5,5 +5,5 @@ form.input('geojson_url', label=_('GeoJSON URL'), value=resource_view['geojson_u
 }}
 
 {{
-form.input('geojson_property', label=_('GeoJSON Property'), value=resource_view['geojson_property'])
+form.input('geojson_key_field', label=_('GeoJSON Key Field'), value=resource_view['geojson_key_field'])
 }}
