--- a/ckanext/choroplethmap/theme/templates/choroplethmap_view.html
+++ b/ckanext/choroplethmap/theme/templates/choroplethmap_view.html
@@ -4,7 +4,8 @@
   data-module = "choroplethmap"
   data-module-resource-id = "{{ resource.id }}"
   data-module-geojson-url = "{{ resource_view.geojson_url }}"
-  data-module-geojson-property = "{{ resource_view.geojson_property }}"
+  data-module-geojson-key-field = "{{ resource_view.geojson_key_field }}"
+  data-module-resource-key-field = "id"
   id = "choroplethmap-{{ resource_view.id }}"
   class = "choroplethmap"
   >
