User now can configure resource key field and value from the form.

--- a/ckanext/choroplethmap/theme/templates/choroplethmap_form.html
+++ b/ckanext/choroplethmap/theme/templates/choroplethmap_form.html
@@ -7,3 +7,11 @@ form.input('geojson_url', label=_('GeoJSON URL'), value=resource_view['geojson_u
 {{
 form.input('geojson_key_field', label=_('GeoJSON Key Field'), value=resource_view['geojson_key_field'])
 }}
+
+{{
+form.input('resource_key_field', label=_('Key Field'), value=resource_view['resource_key_field'])
+}}
+
+{{
+form.input('resource_value_field', label=_('Value Field'), value=resource_view['resource_value_field'])
+}}
