--- a/ckanext/choroplethmap/theme/templates/choroplethmap_view.html
+++ b/ckanext/choroplethmap/theme/templates/choroplethmap_view.html
@@ -3,8 +3,8 @@
 <div
   data-module = "choroplethmap"
   data-module-resource-id = "{{ resource.id }}"
-  data-module-resource-key-field = "id"
-  data-module-resource-value-field = "rate"
+  data-module-resource-key-field = "{{ resource_view.resource_key_field }}"
+  data-module-resource-value-field = "{{ resource_view.resource_value_field }}"
   data-module-geojson-url = "{{ resource_view.geojson_url }}"
   data-module-geojson-key-field = "{{ resource_view.geojson_key_field }}"
   id = "choroplethmap-{{ resource_view.id }}"
