Only show numeric fields as an option on the value dropdown

--- a/ckanext/choroplethmap/theme/templates/choroplethmap_form.html
+++ b/ckanext/choroplethmap/theme/templates/choroplethmap_form.html
@@ -16,6 +16,6 @@
 }}
 
 {{
-    form.select('resource_value_field', label=_('Value'), options=fields,
+    form.select('resource_value_field', label=_('Value'), options=numeric_fields,
         selected=resource_view['resource_value_field'], is_required=true)
 }}
