--- a/ckanext/choroplethmap/theme/public/choroplethmap.css
+++ b/ckanext/choroplethmap/theme/public/choroplethmap.css
@@ -1,10 +1,11 @@
 .choroplethmap {
-  height: 200px;
+  height: 500px;
 }
 
 .choroplethmap .legend {
   line-height: 18px;
-  color: #555;
+  background-color: white;
+  padding: 0.5em;
 }
 
 .choroplethmap .legend i {
