Only textual fields can be labels

--- a/ckanext/choroplethmap/theme/templates/choroplethmap_form.html
+++ b/ckanext/choroplethmap/theme/templates/choroplethmap_form.html
@@ -21,6 +21,6 @@
 }}
 
 {{
-    form.select('resource_label_field', label=_('Label'), options=fields,
+    form.select('resource_label_field', label=_('Label'), options=textual_fields,
         selected=resource_view['resource_label_field'], is_required=true)
 }}
