--- a/ckanext/choroplethmap/theme/public/choroplethmap.css
+++ b/ckanext/choroplethmap/theme/public/choroplethmap.css
@@ -4,6 +4,11 @@
   cursor: default;
 }
 
+.dashboard-grid .choroplethmap {
+  width: 100%;
+  height: 100%;
+}
+
 .choroplethmap .legend {
   line-height: 18px;
   background-color: white;
