Validates that the GeoJSON URL is in the same domain of CKAN or is relative
We need this to guarantee that we'll be able to download it when creating the
mapping, avoiding cross-domain problems.

Ideally, we would support CORS as well.

--- a/ckanext/choroplethmap/theme/templates/choroplethmap_form.html
+++ b/ckanext/choroplethmap/theme/templates/choroplethmap_form.html
@@ -2,6 +2,7 @@
 
 {{
     form.input('geojson_url', label=_('GeoJSON URL'),
+        error=errors.geojson_url,
         value=resource_view['geojson_url'], is_required=true)
 }}
 
