--- a/ckanext/choroplethmap/theme/templates/choroplethmap_view.html
+++ b/ckanext/choroplethmap/theme/templates/choroplethmap_view.html
@@ -8,6 +8,7 @@
   data-module-resource-label-field = "{{ resource_view.resource_label_field }}"
   data-module-geojson-url = "{{ resource_view.geojson_url }}"
   data-module-geojson-key-field = "{{ resource_view.geojson_key_field }}"
+  data-module-redirect-to-url = "{{ resource_view.redirect_to_url }}"
   id = "choroplethmap-{{ resource_view.id }}"
   class = "choroplethmap"
   >
