--- a/ckanext/choroplethmap/theme/templates/choroplethmap_view.html
+++ b/ckanext/choroplethmap/theme/templates/choroplethmap_view.html
@@ -9,6 +9,7 @@
   data-module-geojson-url = "{{ resource_view.geojson_url }}"
   data-module-geojson-key-field = "{{ resource_view.geojson_key_field }}"
   data-module-redirect-to-url = "{{ resource_view.redirect_to_url }}"
+  data-module-filter-fields = "{{ h.dump_json(resource_view.filter_fields) }}"
   id = "choroplethmap-{{ resource_view.id }}"
   class = "choroplethmap"
   >
