Show errors on the geojson_key_field

--- a/ckanext/choroplethmap/theme/templates/choroplethmap_form.html
+++ b/ckanext/choroplethmap/theme/templates/choroplethmap_form.html
@@ -35,6 +35,7 @@
 
 {{
     form.input('geojson_key_field', label=_('GeoJSON Key Field'),
+        error=errors.geojson_key_field,
         value=resource_view['geojson_key_field'], is_required=true)
 }}
 
