[#13] ChoroplethMap's JS reuses NavigableMap's
There's still too much code duplication, but we're starting to get there.

--- a/ckanext/choroplethmap/theme/templates/choroplethmap_view.html
+++ b/ckanext/choroplethmap/theme/templates/choroplethmap_view.html
@@ -1,4 +1,6 @@
 {% resource 'choroplethmap/main' %}
+{% resource 'choroplethmap/navigablemap' %}
+{% resource 'choroplethmap/choroplethmap' %}
 
 <div
   data-module = "choroplethmap"
