--- a/ckanext/choroplethmap/theme/templates/navigablemap_view.html
+++ b/ckanext/choroplethmap/theme/templates/navigablemap_view.html
@@ -1,7 +1,8 @@
 {% resource 'choroplethmap/main' %}
+{% resource 'choroplethmap/navigablemap' %}
 
 <div
-  data-module = "choroplethmap"
+  data-module = "navigablemap"
   data-module-resource-id = "{{ resource.id }}"
   data-module-resource-key-field = "{{ resource_view.resource_key_field }}"
   data-module-resource-value-field = "{{ resource_view.resource_value_field }}"
@@ -10,7 +11,7 @@
   data-module-geojson-key-field = "{{ resource_view.geojson_key_field }}"
   data-module-redirect-to-url = "{{ resource_view.redirect_to_url }}"
   data-module-filter-fields = "{{ h.dump_json(resource_view.filter_fields) }}"
-  id = "choroplethmap-{{ resource_view.id }}"
-  class = "choroplethmap"
+  id = "navigablemap-{{ resource_view.id }}"
+  class = "navigablemap"
   >
 </div>
