[#13] Reorder choroplethmap's form fields to keep related things close

--- a/ckanext/choroplethmap/theme/templates/choroplethmap_form.html
+++ b/ckanext/choroplethmap/theme/templates/choroplethmap_form.html
@@ -1,7 +1,8 @@
 {% extends 'navigablemap_form.html' %}
 {% import 'macros/form.html' as form %}
 
-{% block form %}
+{% block form_required_fields %}
+
 {{ super() }}
 
 {{
