[#17] basiccharts_filters_form now lives in ckanext-viewhelpers as filters_form

--- a/ckanext/choroplethmap/theme/templates/navigablemap_form.html
+++ b/ckanext/choroplethmap/theme/templates/navigablemap_form.html
@@ -63,7 +63,7 @@
 {% set templateFieldInputs = removableSelect('filter_fields', options=fields) %}
 
 <div
-  data-module = "basiccharts_filters_form"
+  data-module = "filters_form"
   data-module-template-filter-inputs = "{{ h.remove_linebreaks(templateFieldInputs) }}"
   data-module-filters-selector = ".choropleth-map-fields"
   data-module-add-filter-selector = ".choropleth-map-addField"
