[#17] Import resource viewhelpers/main in the navigablemap's form template.

--- a/ckanext/choroplethmap/theme/templates/navigablemap_form.html
+++ b/ckanext/choroplethmap/theme/templates/navigablemap_form.html
@@ -1,3 +1,4 @@
+{% resource 'choroplethmap/main' %}
 {% import 'macros/form.html' as form %}
 
 {% macro filterFields(name, label='', options='', error='', fields={}, classes=[], attrs={}, is_required=false) %}
