--- a/ckanext/choroplethmap/theme/templates/navigablemap_form.html
+++ b/ckanext/choroplethmap/theme/templates/navigablemap_form.html
@@ -1,4 +1,4 @@
-{% resource 'choroplethmap/main' %}
+{% resource 'viewhelpers/form' %}
 {% import 'macros/form.html' as form %}
 
 {% macro filterFields(name, label='', options='', error='', fields={}, classes=[], attrs={}, is_required=false) %}
