--- a/ckanext/choroplethmap/theme/templates/choroplethmap_view.html
+++ b/ckanext/choroplethmap/theme/templates/choroplethmap_view.html
@@ -11,6 +11,6 @@
   data-module-redirect-to-url = "{{ resource_view.redirect_to_url }}"
   data-module-filter-fields = "{{ h.dump_json(resource_view.filter_fields) }}"
   id = "choroplethmap-{{ resource_view.id }}"
-  class = "choroplethmap"
+  class = "navigablemap choroplethmap"
   >
 </div>
