[#28] We don't depend on viewhelpers anymore
Since CKAN's #1792, it's part of core.

--- a/ckanext/mapviews/theme/templates/navigablemap_form.html
+++ b/ckanext/mapviews/theme/templates/navigablemap_form.html
@@ -1,4 +1,4 @@
-{% resource 'viewhelpers/form' %}
+{% resource 'mapviews/main' %}
 {% import 'macros/form.html' as form %}
 
 {% macro filterFields(name, label='', options='', error='', fields={}, classes=[], attrs={}, is_required=false) %}
