--- a/ckanext/mapviews/theme/templates/navigablemap_form.html
+++ b/ckanext/mapviews/theme/templates/navigablemap_form.html
@@ -1,4 +1,5 @@
-{% resource 'mapviews/main' %}
+{% set type = 'asset' if h.ckan_version().split('.')|map('int')|list >= [2, 9, 0] else 'resource' %}
+{% include 'snippets/mapviews_' ~ type ~ '.html'  %}
 {% import 'macros/form.html' as form %}
 
 {% macro filterFields(name, label='', options='', error='', fields={}, classes=[], attrs={}, is_required=false) %}
