--- a/ckanext/mapviews/theme/templates/navigablemap_view.html
+++ b/ckanext/mapviews/theme/templates/navigablemap_view.html
@@ -1,4 +1,5 @@
-{% resource "mapviews/main" %}
+{% set type = 'asset' if h.ckan_version().split('.')|map('int')|list >= [2, 9, 0] else 'resource' %}
+{% include 'snippets/mapviews_' ~ type ~ '.html'  %}
 
 <div
   data-module = "navigablemap"
